Fix margin issue GUI Image on mobile devices

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -246,7 +246,7 @@ nav svg {
         padding: 5px 15px 5px 15px;
     }
     .gui-image {
-        margin-top: 45px;
+        margin-top: -3px;
     }
 }
 
